preloading images & spacing bug

--- a/components/Projects/Work.module.css
+++ b/components/Projects/Work.module.css
@@ -142,7 +142,7 @@
 
     
     .category .info{
-        padding-left: 0px;
+        padding: 20px;
     }
 
     .category .info p{
